# ri-calculator

./: Cargo.toml  README.md  install.sh
src/: main.rs  model_ec2.rs  terminal.rs
