[package]
name = "ri-calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.51.0"
aws-sdk-ec2 = "0.21.0"
aws-smithy-types = "0.51.0"
cli-table = "0.4.7"
tokio = { version = "1.21.2", features = ["full"] }
